--- a/source/partials/_juke.erb
+++ b/source/partials/_juke.erb
@@ -3,7 +3,7 @@
   <% if current_page.previous_article %>
   <div class="juke juke-previous">
     <a class="left" href="<%= current_page.previous_article.url %>" title="Previous: <%= current_page.previous_article.title %>">
-      <span class="ss-icon ss-navigateleft"></span>
+      <span class="ss-icon ss-air ss-navigateleft"></span>
       <h2><%= current_page.previous_article.title %></h2>
       <span class="next-up">Previously, <%= current_page.previous_article.data.category %>.</span>
     </a>
@@ -12,7 +12,7 @@
   <% if current_page.next_article %>
   <div class="juke juke-next">
     <a class="right" href="<%= current_page.next_article.url %>" title="Previous: <%= current_page.next_article.title %>">
-      <span class="ss-icon ss-navigateright"></span>
+      <span class="ss-icon ss-air ss-navigateright"></span>
       <h2><%= current_page.next_article.title %></h2>
       <span class="next-up">Next up, <%= current_page.next_article.data.category %>.</span>
     </a>
