Create a minimalistic base layout, have the old layout (new default) extend that.

--- a/source/layouts/prose.erb
+++ b/source/layouts/prose.erb
@@ -1,4 +1,4 @@
-<% wrap_layout :layout do %>
+<% wrap_layout :default do %>
 
 <article class="entry hentry prose" itemscope itemtype="http://schema.org/BlogPosting">
   <meta content="<%= current_page.url %>" itemprop="url">
