So long Feedburner.

--- a/source/layouts/minimal.erb
+++ b/source/layouts/minimal.erb
@@ -14,7 +14,7 @@
   <meta name="verify-v1" content="BvvtENncdNqVXB6atrkLVq6ctSy/9OFH9qfIfyK2wZ0=">
   <meta name="google-site-verification" content="RGOtILy_e7f-Rppoau74G0yzA-pejrlqz2dODnxk8oU">
 
-  <link rel="alternate" type="application/rss+xml" title="Atom" href="http://feeds.feedburner.com/avalonstar">
+  <link rel="alternate" type="application/rss+xml" title="Atom" href="/feed.xml">
   <link rel="shortcut icon" href="favicon.png">
   <link rel="icon" type="image/ico" href="favicon.ico">
 
