--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,6 +1,6 @@
 <%= partial "partials/navigation" %>
 <header class="header">
-  <a class="toggle" href="#left"><span class="ss-icon ss-menu"></span></a>
+  <a class="toggle" href="#left"><span class="ss-icon ss-air ss-menu"></span></a>
   <div class="site-logo <%= 'sans-star' if current_page.data.category %>"></div>
   <a class="site-logotype desktop-only" href="/">Avalonstar</a>
   <div class="icon-contain">
