--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,5 +1,10 @@
 <nav role="navigation">
   <ul class="main-navigation">
+    <li class="section-home">
+      <% link_to "/" do %>
+        <span class="ss-icon ss-air">&#x2302;</span>
+      <% end %>
+    </li>
     <!--
     <li class="section-live desktop-only">
       <% link_to "/live/" do %>
