--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="what-is">
       <h1>What is Avalonstar?</h1>
-      <p>From design portfolio, to award-winning blog, to personal playground, Avalonstar is the long-running journal and online moniker of designer and developer, Bryan Veloso.</p>
+      <p><%= data.site.description %></p>
     </div>
   </div>
   <%= partial "partials/social" %>
