--- a/source/layouts/video.erb
+++ b/source/layouts/video.erb
@@ -8,7 +8,7 @@
       <h1 class="entry-title" itemprop="headline"><%= current_page.title %></h1>
       <span class="entry-category">
         <span itemprop="articleSection"><%= current_page.data.category %></span>, by
-        <a class="vcard author" href="https://twitter.com/bryanveloso" rel="author" itemprop="creator">Bryan Veloso</a>
+        <a class="vcard author" href="https://twitter.com/bryanveloso" rel="author" itemprop="creator"><span class="fn">Bryan Veloso</span></a>
       </span>
       <a class="scroll-target" href="#top"><span class="ss-icon ss-air ss-navigatedown"></span></a>
     </div>
