--- a/source/layouts/minimal.erb
+++ b/source/layouts/minimal.erb
@@ -13,7 +13,10 @@
   <meta name="ICBM" content="34.023411,-118.403607">
   <meta name="verify-v1" content="BvvtENncdNqVXB6atrkLVq6ctSy/9OFH9qfIfyK2wZ0=">
   <meta name="google-site-verification" content="RGOtILy_e7f-Rppoau74G0yzA-pejrlqz2dODnxk8oU">
+  <meta property="fb:app_id" content="113685200489">
+  <meta property="og:locale" content="en_US">
   <meta property="og:image" content="http://avalonstar.com/assets/images/phoenix-facebook.png">
+  <% if content_for?(:opengraph) %><%= yield_content :opengraph %><% end %>
 
   <link rel="alternate" type="application/rss+xml" title="Atom" href="/feed.xml">
   <link rel="shortcut icon" href="favicon.png">
