--- a/source/layouts/prose.erb
+++ b/source/layouts/prose.erb
@@ -1,5 +1,10 @@
 <% wrap_layout :default do %>
 <% content_for :description do %><% strip_tags(current_page.summary(150, '...')) %><% end %>
+<% content_for :opengraph do %>
+<meta property="article:published_time" content="<%= current_page.date.strftime("%F") %>">
+<meta property="article:author" content="42403178">
+<meta property="article:publisher" content="11007806698">
+<% end %>
 
 <article class="entry hentry prose" itemscope itemtype="http://schema.org/BlogPosting">
   <meta content="<%= current_page.url %>" itemprop="url">
