--- a/source/layouts/video.erb
+++ b/source/layouts/video.erb
@@ -4,6 +4,7 @@
 <meta property="article:published_time" content="<%= current_page.date.strftime("%F") %>">
 <meta property="article:author" content="42403178">
 <meta property="article:publisher" content="11007806698">
+<meta property="og:video:url" content="http://youtu.be/<%= current_page.data.ytid %>">
 <% end %>
 
 <article class="entry hentry video" itemscope itemtype="http://schema.org/BlogPosting">
