Add a missing og:type.

--- a/source/layouts/video.erb
+++ b/source/layouts/video.erb
@@ -1,10 +1,10 @@
 <% wrap_layout :default do %>
 <% content_for :description do %><% strip_tags(current_page.summary(150, '...')) %><% end %>
 <% content_for :opengraph do %>
+<meta property="og:type" content="article">
 <meta property="article:published_time" content="<%= current_page.date.strftime("%F") %>">
 <meta property="article:author" content="42403178">
 <meta property="article:publisher" content="11007806698">
-<meta property="og:video:url" content="http://youtu.be/<%= current_page.data.ytid %>">
 <% end %>
 
 <article class="entry hentry video" itemscope itemtype="http://schema.org/BlogPosting">
