--- a/source/layouts/prose.erb
+++ b/source/layouts/prose.erb
@@ -1,6 +1,7 @@
 <% wrap_layout :default do %>
 <% content_for :description do %><% strip_tags(current_page.summary(150, '...')) %><% end %>
 <% content_for :opengraph do %>
+<meta property="og:type" content="article">
 <meta property="article:published_time" content="<%= current_page.date.strftime("%F") %>">
 <meta property="article:author" content="42403178">
 <meta property="article:publisher" content="11007806698">
