Bring that width in.

--- a/source/assets/stylesheets/sections/_entries.scss
+++ b/source/assets/stylesheets/sections/_entries.scss
@@ -51,6 +51,7 @@
     }
   }
 
+  img { max-width: 100%; }
   p, ol, ul {
     font-size: 1.333rem;
     margin: 1.777em 1.333rem;  // Default, "mobile-first" style for paragraphs.
