--- a/source/partials/_videohero.erb
+++ b/source/partials/_videohero.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="video-type twitch">
       <div class="video-statistics">
-        <a class="video-link" href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
+        <a class="video-link" href="http://twitch.tv/avalonstar">Avalonstar Live <i>on Twitch</i></a>
         <a class="subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><span class="js-twitch-subscriber-count">45</span></a>
         <span class="ss-icon ss-smile"></span>
       </div>
@@ -29,7 +29,7 @@
           <param name="allowScriptAccess" value="always">
           <param name="allowNetworking" value="all">
           <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-          <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=avalonstartv&amp;auto_play=true&amp;start_volume=25" />
+          <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=avalonstar&amp;auto_play=true&amp;start_volume=25" />
         </object>
         <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>AvalonstarTV</strong>!</div>
       </div>
