--- a/source/partials/_videohero.erb
+++ b/source/partials/_videohero.erb
@@ -24,14 +24,7 @@
         <span class="ss-icon ss-smile"></span>
       </div>
       <div class="embed-container">
-        <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=avalonstartv" bgcolor="#000000">
-          <param name="allowFullScreen" value="true">
-          <param name="allowScriptAccess" value="always">
-          <param name="allowNetworking" value="all">
-          <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-          <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=avalonstar&amp;auto_play=true&amp;start_volume=25" />
-        </object>
-        <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>AvalonstarTV</strong>!</div>
+        <iframe id="player" type="text/html" src="http://www.twitch.tv/avalonstar/hls" frameborder="0"></iframe>
       </div>
       <div class="background">
         <!-- <h1><a class="js-recent-twitch-link" href="">Bryan &amp; Jen Play TERA</a></h1> -->
