--- a/source/assets/stylesheets/_responsive.scss
+++ b/source/assets/stylesheets/_responsive.scss
@@ -109,7 +109,7 @@
       margin-right: auto;
       width: $desktop-width;
     }
-    img, .gist {
+    img, .gist, .speakerdeck-container {
       margin-left: auto;
       margin-right: auto;
       max-width: $desktop-width;
