--- a/source/gaming/rpgs.html.erb
+++ b/source/gaming/rpgs.html.erb
@@ -3,6 +3,7 @@ title: RPGs
 ---
 
 <% data.rpgs.played.each do |series| %>
+<div class="series">
   <h1 class="series-name"><%= series.series %></h1>
   <ul>
   <% series.games.each do |game| %>
@@ -13,4 +14,5 @@ title: RPGs
     </li>
   <% end %>
   </ul>
+</div>
 <% end %>
