Keep everything else sane.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,8 @@
 layout: minimal
 title: Welcome
 ---
+<% content_for :stylesheets do %><%= stylesheet_link_tag "normalize", "syntax", "screen" %><% end %>
+
 <div class="introductory-tile">
   <div class="tile primary-introduction">
     <div class="site-logo"></div>
